# MediaPlayer

./: .gitignore  CMakeLists.txt  README.md  build.ps1  cleanbuild.ps1
.github/workflows/: codeql-analysis.yml
include/: Window.hpp
src/: MediaPlayer.cpp  Window.cpp
